--- a/index.html
+++ b/index.html
@@ -1,12 +1,99 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NOMAD-HZB Tutorials</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+
 </head>
+
+
 <body>
-    <h1>HAllo</h1>
-    <iframe src="https://scribehow.com/embed/Create_Upload_and_Link_Project_Data__rNFvWbnTTRaeqVZEx43YIg" width="100%" height="640" allowfullscreen frameborder="0"></iframe>
-    <h1>Hallo</h1>
+
+<header>
+
+<div class="logo"> 
+    <img src="images/hzb-logo-a4-rgb.png" class="HZB-logo">
+    <img src="images/logoBar.svg" class="HZB-bar"> 
+</div>
+
+<img src="images/nomad-oasis-text.svg" alt="Third Image" class="oasis-logo">
+</header>
+
+
+<!-- nav menu -->
+<nav>
+    <ul>
+        <li><a href="#">Tutorials</a></li>
+        <li><a href="#">Find my Oasis</a></li>
+        <li><a href="#">About</a></li>
+    </ul>
+  </nav>
+
+
+
+
+<section class="hero">
+<h1>Tutorials </h1>
+<p>Explore the video tutorials to learn more about how to manage your data.</p>
+</section>
+
+
+  <main class="container">
+
+    <div class="video-card">
+      <iframe src="tutorials/create_new_upload.mp4" frameborder="0" allowfullscreen></iframe>
+      <div class="info">
+        <h3>Getting Started</h3>
+        <p>Learn how to install and set up the software.</p>
+      </div>
+    </div>
+
+
+    <div class="video-card">
+      <iframe src="tutorials/create_new_upload.mp4" frameborder="0" allowfullscreen></iframe>
+      <div class="info">
+      <h3>Feature Overview</h3>
+        <p>An overview of key functionalities and tools.</p>
+      </div>
+    </div>
+
+    <div class="video-card">
+     <iframe src="tutorials/create_new_upload.mp4" frameborder="0" allowfullscreen></iframe>
+     <div class="info">
+        <h3>Create upload (project folder)</h3>
+        <p>How to create an upload to hold the entries for your project.</p>
+        </div>
+      </div>
+
+      <div class="video-card">
+        <iframe src="tutorials/Catlab_SMT_access.mp4" frameborder="0" allowfullscreen></iframe>
+        <div class="info">
+          <h3>Access Sample Management Tool</h3>
+          <p>How to access the voila sample management tool.</p>
+        </div>
+      </div>
+
+      <div class="video-card">
+        <iframe src="tutorials/Catlab_SMT_create_sample_entries.mp4" frameborder="0" allowfullscreen></iframe>
+        <div class="info">
+          <h3>Create sample entries</h3>
+          <p>How to create sample entries with the Sample Management Tool.</p>
+        </div>
+      </div>
+
+<!-- here 2nd row -->
+
+
+    <!-- More video cards as needed -->
+  </main>
+
+  <footer>
+    &copy; 2025 license stuff blabla. All rights reserved.
+  </footer>
+
 </body>
+
 </html>
